fix: Overflow del body

--- a/app/src/globals/styles/globals.css
+++ b/app/src/globals/styles/globals.css
@@ -142,3 +142,7 @@ p{
   }
 }
 
+
+body{
+  overflow-x: hidden;
+}
